hphp/hack/test/typecheck/coeffects/pretty_subtyping.php
<?hh

function purification_fail(
  (function ()[write_props]: void) $f
): (function ()[]: void) {
  return $f;
}
